[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/FontH1.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/button/symbol_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/screens/abc_screen.gd" type="Script" id=3]
[ext_resource path="res://ui/h_flow_container/h_flow_container.gd" type="Script" id=4]
[ext_resource path="res://ui/theme/texno_theme.tres" type="Theme" id=5]
[ext_resource path="res://ui/button/back_button.tscn" type="PackedScene" id=6]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1229.13, 600.33 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxLayout" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40

[node name="VBoxSide" type="VBoxContainer" parent="HBoxLayout"]
margin_right = 71.0
margin_bottom = 580.0
custom_constants/separation = 10

[node name="BackButton" parent="HBoxLayout/VBoxSide" instance=ExtResource( 6 )]
margin_right = 71.0
margin_bottom = 29.0

[node name="ButtonReload" type="Button" parent="HBoxLayout/VBoxSide"]
margin_top = 39.0
margin_right = 71.0
margin_bottom = 68.0
text = "reload"

[node name="ButtonOpenDir" type="Button" parent="HBoxLayout/VBoxSide"]
margin_top = 78.0
margin_right = 71.0
margin_bottom = 107.0
text = "open dir"

[node name="ScrollAbc" type="ScrollContainer" parent="HBoxLayout"]
margin_left = 111.0
margin_right = 1004.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 1581.48, 289.13 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginAbc" type="MarginContainer" parent="HBoxLayout/ScrollAbc"]
margin_right = 893.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxAbc" type="VBoxContainer" parent="HBoxLayout/ScrollAbc/MarginAbc"]
margin_left = 10.0
margin_top = 10.0
margin_right = 883.0
margin_bottom = 570.0
rect_min_size = Vector2( 600, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="LabelAbc" type="Label" parent="HBoxLayout/ScrollAbc/MarginAbc/VBoxAbc"]
margin_right = 873.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 1 )
text = "ABC"
align = 1

[node name="HFlowSymbols" type="Container" parent="HBoxLayout/ScrollAbc/MarginAbc/VBoxAbc"]
margin_top = 55.0
margin_right = 873.0
margin_bottom = 155.0
size_flags_horizontal = 3
script = ExtResource( 4 )
horizontal_margin = 10.0
vertical_margin = 10.0

[node name="SymbolButton" parent="HBoxLayout/ScrollAbc/MarginAbc/VBoxAbc/HFlowSymbols" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 200.0
margin_bottom = 100.0
